tests/specs/ClassOverridePropMethod.txt
# mod.ts
export class C extends B {
  override a(): void {}
  override b: string;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:1
  | 
1 | export class C extends B {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:3:3
  | 
3 |   override b: string;
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:2:3
  | 
2 |   override a(): void {}
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

class C extends B

  override b: string
  override a(): void


# output.json
[
  {
    "kind": "class",
    "name": "C",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [
        {
          "tsType": {
            "repr": "string",
            "kind": "keyword",
            "keyword": "string"
          },
          "readonly": false,
          "accessibility": null,
          "optional": false,
          "isAbstract": false,
          "isStatic": false,
          "isOverride": true,
          "name": "b",
          "location": {
            "filename": "file:///mod.ts",
            "line": 3,
            "col": 2,
            "byteIndex": 53
          }
        }
      ],
      "indexSignatures": [],
      "methods": [
        {
          "accessibility": null,
          "optional": false,
          "isAbstract": false,
          "isStatic": false,
          "isOverride": true,
          "name": "a",
          "kind": "method",
          "functionDef": {
            "params": [],
            "returnType": {
              "repr": "void",
              "kind": "keyword",
              "keyword": "void"
            },
            "hasBody": true,
            "isAsync": false,
            "isGenerator": false,
            "typeParams": []
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 29
          }
        }
      ],
      "extends": "B",
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
